# ericthewry.github.io

./: .gitignore  Makefile  README.md  about.html  add-news  archive.html  careerex.html  contact.html  cv.fdb_latexmk  cv.fls  cv.tex  deployCommand  index.html  news.html  posts.html  resume.tex  stack.yaml  whywry.html
css/: default.css
education/: 2011-08-15-isa.html  2013-08-20-pomona.html  2017-08-21-cornell.html
my-site/: #resume.tex#  Makefile  careerex.md  contact.markdown  cv.fdb_latexmk  cv.fls  cv.tex  index.html  news.html  posts.html  resume.aux  resume.out  resume.tex  site.hs  stack.yaml  whywry.md
mysite/: LICENSE  mysite.cabal
news/: 2017-03-02-upenn.html  2017-03-07-princeton.html  2017-03-15-ucsd.html  2017-04-07-thesis_prez.html  2017-04-12-thesis.html  2017-04-15-cornell.html  2017-05-14-pomonagraduation.html  2017-05-23-pldg.html  2017-08-22-cornellstart.html  2017-11-07-plmwaccept.html  2018-05-01-fujitsu.html  2018-05-11-taaward.html  2018-10-03-npiretreat.html  2019-03-26-definterp.html  2019-04-08-nsfgrfp.html  2019-06-19-npirouting.html  2019-06-25-carreerex.html  2020-04-28-p4expert.html  2020-12-01-epik.html  2020-12-11-avenirNSDI.html  2020-12-15-aexam.html  2021-04-19-avenir-cs-news.html  2021-05-03-simons.html  2021-07-19-p4cav.html  2022-03-10-intel.html  2023-01-20-popl23.html  2023-10-18-epfl.html  2024-08-23-capisceaec.html  2024-11-01-ut.html  2024-11-21-bexam.html  2025-05-26-oopsla26.html
papers/: 2016-06-15-imies.html  2017-04-15-thesis.html  2017-07-15-kmt.html  2017-10-20-finite.html  2018-01-08-kmt.html  (+11 more)
pdfs/: cv.tex
(+123 files in other folders)
