name:                mysite
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ericthewry/mysite#readme
license:             BSD3
license-file:        LICENSE
author:              Eric Campbell
maintainer:          1234goal@gmail.com
copyright:           2017
category:            professional
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable mysite
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll
